<resources>
    <string name="app_name">Constraintlayout</string>
    <string name="_082112074616">082112074616</string>
    <string name="franconero">FRANCONERO</string>
    <string name="button">Button</string>
    <string name="button2">Button</string>
    <string name="sky">SKY</string>
    <string name="sepatu">sepatu</string>
    <string name="shoes_vans">SHOES VANS</string>
    <string name="panah">panah</string>
    <string name="right">Button</string>
    <string name="match_parent">Button</string>
    <string name="left">Button</string>
    <string name="button_2">Button</string>
    <string name="button1">Button</string>
    <string name="righttext">RIGHT</string>
    <string name="Match_Parent">Match Parent</string>
    <string name="lefttext">LEFT</string>
    <string name="buttonright"><![CDATA[>]]></string>
    <string name="textselect">Select your Pepsi</string>
    <string name="buttonleft"><![CDATA[<]]></string>
    <string name="pepsilogo">TODO</string>
    <string name="tablelayout">table</string>
    <string name="textcharacter">Character</string>
    <string name="insert_here_ch">insert here</string>
    <string name="tablecar">car</string>
    <string name="insert_here_car">insert here</string>
    <string name="skilltable">Skill</string>
    <string name="insert_here_skill">insert here</string>
    <string name="submitbutton">Submit</string>
    <string name="Mario">TODO</string>
</resources>