<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LinearLayout">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/pepsi"
        tools:ignore="RtlHardcoded"
        android:contentDescription="@string/pepsilogo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="2"
            android:text="@string/button1"
            android:backgroundTint="#0027FF"
            app:iconTint="#3F51B5"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:backgroundTint="#0027FF"
            android:text="@string/button_2"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/Match_Parent"
        android:backgroundTint="#FF0000"
        app:iconTint="#FF0000" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="0dp"
        android:layout_marginRight="25dp"
        android:text="@string/righttext"
        android:backgroundTint="#0027FF"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="0dp"
        android:backgroundTint="#0027FF"
        android:text="@string/lefttext"
        app:iconTint="#3F51B5"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/leftButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#0027FF"
            android:gravity="center"
            android:text="@string/buttonleft"
            android:textSize="40dp"
            app:cornerRadius="0dp"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/selectFilmText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textselect"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            tools:ignore="SpUsage" />

        <Button
            android:id="@+id/RightButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="#FF0000"
            android:gravity="center"
            android:text="@string/buttonright"
            android:textSize="40sp"
            app:cornerRadius="0dp" />

    </LinearLayout>


</LinearLayout>